added registration and login form.

--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -11,7 +11,14 @@
         <div class="page-header">
             {% if user.is_authenticated %}
                 <a href="{% url 'post_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
+                <a href=" " class="top-menu"><span class="glyphicon glyphicon-user"></span></a>
+                <a href="{% url 'logout' %}" class="top-menu">Logout</a>
+                {% else %}
+                
+                <a href="{% url 'login_url' %}" class="top-menu">Login</a>
+                <a href="{% url 'register_url' %}" class="top-menu">Register</a>
             {% endif %}
+
             <h1><a href="/">My First Blog</a></h1>
         </div>
         <div class="content container">
